--- a/readme
+++ b/readme
@@ -1,3 +1,12 @@
-Привет, мир!
+1)Очистка и визуализация данных: Данные по загрязнению морей России
+Целью данного блокнота является очистка и подготовка данных по загрязнению морей России, взятых с открытой базы данных сайта портала
+"Единая государственная система информации об обстановке в мировом океане" http://esimo.ru/portal/portal/esimo-user/main
 
-https://github.com/marat92d/Portfolio/blob/master/hello%20world.html
+2)Очистка и визуализация данных: Реестр прокатных удостоверений фильмов
+Целью данного блокнота является очистка и подготовка данных Государственного регистра фильмов , взятых с открытой базы данных сайта
+Министерства культуры РФ 'https://opendata.mkrf.ru/opendata'
+Государственный регистр фильмов — база данных, содержащая информацию о фильмах, получивших прокатные удостоверения.
+Позволяет найти фильм по различных критериям, узнать номер прокатного удостоверения.
+
+3 )Прогнозирование оттока студентов : Финальное задание с онлайн курса по Машинному обучению с сайта https://stepik.org/course/4852/syllabus
+Требуется предсказать, сможет ли пользователь успешно закончить онлайн курс Анализ данных в R
