--- a/readme
+++ b/readme
@@ -10,3 +10,6 @@
 
 3 )Прогнозирование оттока студентов : Финальное задание с онлайн курса по Машинному обучению с сайта https://stepik.org/course/4852/syllabus
 Требуется предсказать, сможет ли пользователь успешно закончить онлайн курс Анализ данных в R
+
+4)Построение модели классификатора рукописных цифр : Целью данного блокнота является построение и сравнение разных моделей классификации 
+рукописных цифр. Для сравнения взяты модели К ближайщих соседей и модель нейронной сети многослойного персептона (MLP) из библиотеки scikitlearn
