--- a/readme
+++ b/readme
@@ -13,3 +13,6 @@
 
 4)Построение модели классификатора рукописных цифр : Целью данного блокнота является построение и сравнение разных моделей классификации 
 рукописных цифр. Для сравнения взяты модели К ближайщих соседей и модель нейронной сети многослойного персептона (MLP) из библиотеки scikitlearn
+
+5)Анализ рынка образовательных онлайн платформ: Целью данного анализа является изучение и выявление наиболее востребованных продуктов на рынке 
+образовательных онлайн курсов, а также ее основной аудитории.
