--- a/readme
+++ b/readme
@@ -16,3 +16,6 @@
 
 5)Анализ рынка образовательных онлайн платформ: Целью данного анализа является изучение и выявление наиболее востребованных продуктов на рынке 
 образовательных онлайн курсов, а также ее основной аудитории.
+
+6) Моделирование вкладов физических лиц: Требуется построить и описать модель, где целевой переменной (таргетом) являются помесячные изменения
+объемов рынка вкладов физических лиц РФ в рублях, которая будет объяснима с точки зрения экономической логики.
